--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_vertexai: ^1.6.0
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  colorist_ui:
+  http: ^1.2.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/system_prompt.md
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
